// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItemGroup should require an aria-label or aria-labelledby for a11y 1`] = `
<div>
  <ul
    class="rmd-list"
    role="group"
  >
    <li>
      Content
    </li>
  </ul>
</div>
`;

exports[`MenuItemGroup should require an aria-label or aria-labelledby for a11y 2`] = `
<div>
  <ul
    aria-label="Group"
    class="rmd-list"
    role="group"
  >
    <li>
      Content
    </li>
  </ul>
</div>
`;

exports[`MenuItemGroup should require an aria-label or aria-labelledby for a11y 3`] = `
<div>
  <ul
    aria-labelledby="non-existing-id"
    class="rmd-list"
    role="group"
  >
    <li>
      Content
    </li>
  </ul>
</div>
`;
